@@ -1,3 +1,8 @@
+caputils-0.7.14
+---------------
+
+	* fix: [capinfo] crash when 0 packets.
+
 caputils-0.7.13
 ---------------
 
